--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+
+}
+
 body {
   background-image: url(./imagens/space.jpg);
   background-repeat: no-repeat;
@@ -27,4 +33,11 @@ body {
 
 }
 
+header ul{
+  padding: 10px;
+  list-style: none;
+  display: flex;
+  justify-items: center;
+  gap: 100px;
+}
 
