--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -40,3 +40,20 @@ header ul {
   justify-items: center;
   gap: 100px;
 }
+
+#foguete {
+  width: 50px;
+  height: 50px;
+  background-color: aqua;
+  position: absolute;
+  top: 200px;
+  left: 100px;
+  cursor: pointer;
+  transition: transform 0.05s linear;
+}
+
+#habilidades{
+ padding: 200px;
+ color: white;
+}
+
