--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -29,7 +29,7 @@ body {
 
 }
 
-#pessoa img{
+#pessoa img {
   border-radius: 40%;
 }
 
@@ -46,7 +46,7 @@ body {
   align-items: center;
 }
 
-
+/*
 header ul {
   padding: 10px;
   list-style: none;
@@ -54,11 +54,11 @@ header ul {
   justify-items: center;
   gap: 100px;
 }
+*/
 
 #foguete {
   width: 50px;
   height: 50px;
-  background-color: aqua;
   position: absolute;
   top: 200px;
   left: 100px;
@@ -66,16 +66,24 @@ header ul {
   transition: transform 0.05s linear;
 }
 
-#habilidades{
- padding: 200px;
- color: white;
+#foguete img {
+  width: 150%;
+  height: 150%;
 }
 
-.rodape{
-  text-align: center;
-    padding: 1.5rem 0;
-    color: #b3e0ff;
-    margin-top: 4rem;
-    font-size: 1rem;
-    letter-spacing: 1px;
+#habilidades {
+  padding: 200px;
+  color: white;
 }
+
+.rodape {
+  text-align: center;
+  padding: 1.5rem 0;
+  color: #b3e0ff;
+  margin-top: 4rem;
+  font-size: 1rem;
+  letter-spacing: 1px;
+}
+
+
+.habilidades {}
