--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -88,6 +88,9 @@ header ul {
 
 .habilidades {
   background-color: aliceblue;
-  width: 30%;
-
+  width: 50%;
+  height: 200px;
+  margin: 30px;
+  border-radius: 50px;
+  padding: 40px 0 0 10px;
 }
