--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -62,14 +62,17 @@ header {
 
 
 #foguete {
+  position: fixed;
   width: 50px;
   height: 50px;
-  position: absolute;
-  top: 200px;
-  left: 100px;
-  cursor: pointer;
-  transition: transform 0.05s linear;
+  top:200px;
+  
+  transform: translate(-50%, -50%);
+  transition: top 0.05s linear, left 0.05s linear;
+  z-index: 999;
+  pointer-events: none; /* <- ESSENCIAL */
 }
+
 
 #foguete img {
   width: 150%;
