--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -141,6 +141,15 @@ header {
 
 }
 
+.sistema-solar{
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: relative;
+  max-width: 70%;
+  display: flex;
+}
 
 .orbit-sun {
   position: relative;
@@ -218,80 +227,72 @@ header {
 
 @keyframes mercurio {
   from {
-    transform: rotate(0deg) translateX(40px) rotate(-0deg);
+    transform: rotate(0deg) translateX(50px) rotate(-360deg);
   }
-
   to {
-    transform: rotate(360deg) translateX(40px) rotate(-360deg);
+    transform: rotate(360deg) translateX(50px) rotate(-360deg);
   }
 }
 
 @keyframes venus {
   from {
-    transform: rotate(0deg) translateX(60px) rotate(-0deg);
+    transform: rotate(0deg) translateX(80px) rotate(-360deg);
   }
-
-  to {
-    transform: rotate(360deg) translateX(60px) rotate(-360deg);
-  }
-}
-
-@keyframes terra {
-  from {
-    transform: rotate(0deg) translateX(80px) rotate(-0deg);
-  }
-
   to {
     transform: rotate(360deg) translateX(80px) rotate(-360deg);
   }
 }
 
-@keyframes marte {
+@keyframes terra {
   from {
-    transform: rotate(0deg) translateX(100px) rotate(-0deg);
+    transform: rotate(0deg) translateX(115px) rotate(-360deg);
   }
-
   to {
-    transform: rotate(360deg) translateX(100px) rotate(-360deg);
+    transform: rotate(360deg) translateX(115px) rotate(-360deg);
   }
 }
 
-@keyframes jupiter {
+@keyframes marte {
   from {
-    transform: rotate(0deg) translateX(140px) rotate(-0deg);
+    transform: rotate(0deg) translateX(140px) rotate(-360deg);
   }
-
   to {
     transform: rotate(360deg) translateX(140px) rotate(-360deg);
   }
 }
 
+@keyframes jupiter {
+  from {
+    transform: rotate(0deg) translateX(160px) rotate(-360deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(160px) rotate(-360deg);
+  }
+}
+
 @keyframes saturno {
   from {
-    transform: rotate(0deg) translateX(180px) rotate(-0deg);
+    transform: rotate(0deg) translateX(240px) rotate(-360deg);
   }
-
   to {
-    transform: rotate(360deg) translateX(180px) rotate(-360deg);
+    transform: rotate(360deg) translateX(240px) rotate(-360deg);
   }
 }
 
 @keyframes urano {
   from {
-    transform: rotate(0deg) translateX(220px) rotate(-0deg);
+    transform: rotate(0deg) translateX(305px) rotate(-360deg);
   }
-
   to {
-    transform: rotate(360deg) translateX(220px) rotate(-360deg);
+    transform: rotate(360deg) translateX(305px) rotate(-360deg);
   }
 }
 
 @keyframes netuno {
   from {
-    transform: rotate(0deg) translateX(260px) rotate(-0deg);
+    transform: rotate(0deg) translateX(350px) rotate(-360deg);
   }
-
   to {
-    transform: rotate(360deg) translateX(260px) rotate(-360deg);
+    transform: rotate(360deg) translateX(350px) rotate(-360deg);
   }
 }
