--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -62,13 +62,13 @@ header {
 }
 
 
-#foguete {
+.foguete {
   width: 60px;
   height: 60px;
   top: 200px;
   position: relative;
   transition: top 0.05s linear, left 0.05s linear;
-  z-index: 1;
+  z-index: 100;
 }
 
 
